--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
     <title>Fashion MNIST Classifier</title>
   </head>
   <body>
-    <h1>Enter Image Data</h1>
+    <h1>El Yachkouri M-Amine - ML in Production</h1>
+    <h2>Enter Image Data</h2>
     <form action="/" method="post">
       <textarea name="image_data" rows="28" cols="28"></textarea>
       <br />
